objects/child123__c.object
<CustomObject>
    <fields>
        <fullName>external__c</fullName>
        <externalId>true</externalId>
        <label>external</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mypicklist__c</fullName>
        <label>mypicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
                <value>
                    <fullName>four</fullName>
                </value>
                <value>
                    <fullName>five</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parent_link_master__c</fullName>
        <label>parentabc</label>
        <referenceTo>parentabc__c</referenceTo>
        <relationshipLabel>child123s</relationshipLabel>
        <relationshipName>child123s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>child123</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>child123 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>child123s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>